// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTextInput Component renders as disabled when editable is false 1`] = `
<View
  style={
    Object {
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 48,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        Object {
          "borderColor": "#9FA5C0",
        },
        Object {
          "backgroundColor": "#f5f5f5",
          "borderColor": "#e0e0e0",
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Test placeholder"
      placeholderTextColor="#9FA5C0"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "fontSize": 16,
            "padding": 0,
          },
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="disabled value"
    />
  </View>
</View>
`;

exports[`CustomTextInput Component renders correctly with basic props 1`] = `
<View
  style={
    Object {
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 48,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        Object {
          "borderColor": "#9FA5C0",
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Test placeholder"
      placeholderTextColor="#9FA5C0"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "fontSize": 16,
            "padding": 0,
          },
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`CustomTextInput Component renders with character count when showCharacterCount and maxLength are provided 1`] = `
<View
  style={
    Object {
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Test Label
    </Text>
    <Text
      style={
        Object {
          "color": "#666",
          "fontSize": 12,
        }
      }
    >
      4
      /
      100
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 48,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        Object {
          "borderColor": "#9FA5C0",
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      accessibilityLabel="Test Label"
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      editable={true}
      keyboardType="default"
      maxLength={100}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Test placeholder"
      placeholderTextColor="#9FA5C0"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "fontSize": 16,
            "padding": 0,
          },
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="test"
    />
  </View>
</View>
`;

exports[`CustomTextInput Component renders with error message when error prop is provided 1`] = `
<View
  style={
    Object {
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 48,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        Object {
          "borderColor": "#ff4444",
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Test placeholder"
      placeholderTextColor="#9FA5C0"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "fontSize": 16,
            "padding": 0,
          },
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#ff4444",
          "fontSize": 14,
          "marginLeft": 4,
          "marginTop": 4,
        },
        undefined,
      ]
    }
  >
    This is an error message
  </Text>
</View>
`;

exports[`CustomTextInput Component renders with label when provided 1`] = `
<View
  style={
    Object {
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Test Label
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 48,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        Object {
          "borderColor": "#9FA5C0",
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      accessibilityLabel="Test Label"
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Test placeholder"
      placeholderTextColor="#9FA5C0"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "fontSize": 16,
            "padding": 0,
          },
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`CustomTextInput Component renders with multiline input 1`] = `
<View
  style={
    Object {
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 48,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        Object {
          "borderColor": "#9FA5C0",
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      editable={true}
      keyboardType="default"
      multiline={true}
      numberOfLines={4}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Test placeholder"
      placeholderTextColor="#9FA5C0"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "fontSize": 16,
            "padding": 0,
          },
          Object {
            "paddingBottom": 8,
            "paddingTop": 8,
            "textAlignVertical": "top",
          },
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`CustomTextInput Component renders with password toggle when secureTextEntry is true 1`] = `
<View
  style={
    Object {
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 48,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        Object {
          "borderColor": "#9FA5C0",
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Password"
      placeholderTextColor="#9FA5C0"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "fontSize": 16,
            "padding": 0,
          },
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="password123"
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 4,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 18,
          }
        }
      >
        👁️
      </Text>
    </View>
  </View>
</View>
`;

exports[`CustomTextInput Component renders with required indicator when required prop is true 1`] = `
<View
  style={
    Object {
      "marginVertical": 8,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#333",
            "fontSize": 16,
            "fontWeight": "500",
          },
          undefined,
        ]
      }
    >
      Test Label
      <Text
        style={
          Object {
            "color": "#ff4444",
            "fontSize": 16,
          }
        }
      >
         *
      </Text>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "minHeight": 48,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        Object {
          "borderColor": "#9FA5C0",
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      accessibilityLabel="Test Label"
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Test placeholder"
      placeholderTextColor="#9FA5C0"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "fontSize": 16,
            "padding": 0,
          },
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;
